[FIX] l10n_mx_edi: Fix css of document_state_field
Message and button are overlapping when the message is too long.

closes odoo/enterprise#46165

X-original-commit: 6165a83903e5fe8effcc63057b99bcf0e3f435ef

--- a/l10n_mx_edi/static/src/components/document_state/document_state_field.scss
+++ b/l10n_mx_edi/static/src/components/document_state/document_state_field.scss
@@ -2,17 +2,16 @@
     float: left;
     margin: 1rem;
     width: 360px;
+    display: flex;
 }
 
 .l10n_mx_edi_document_state_popover_clone {
-    margin: 1rem 1rem 0 0;
     border: none;
     color: $o-gray-300;
     font-size: inherit;
     font-weight: normal;
     padding: 0;
     text-align: center;
-    width: 20px;
 
     &:hover {
         color: $o-enterprise-action-color !important;
